--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,5 @@ body {
   font-family: 'pixel', 'monospace';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #33334C;
 }
