--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
-  margin: 0;
-  font-family: 'pixel', 'monospace';
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #33334C;
+    margin: 0;
+    font-family: 'pixel', 'monospace';
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: #33334c;
 }
